--- a/web-module/pom.xml
+++ b/web-module/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jugvale.peoplemanagement</groupId>
 	<artifactId>people-management</artifactId>
@@ -96,4 +94,26 @@
 			</plugin>
 		</plugins>
 	</build>
+<profiles>
+        <profile>
+<!-- When built in OpenShift the openshift profile will be used when invoking mvn. -->
+<!-- Use this profile for any OpenShift specific customization your app will need. -->
+<!-- By default that is to put the resulting archive into the deployments folder. -->
+<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+<id>openshift</id>
+<build>
+   <finalName>people-management</finalName>
+   <plugins>
+     <plugin>
+       <artifactId>maven-war-plugin</artifactId>
+       <version>2.2</version>
+       <configuration>
+         <outputDirectory>deployments</outputDirectory>
+         <warName>ROOT</warName>
+       </configuration>
+     </plugin>
+   </plugins>
+ </build>
+</profile>
+    </profiles>
 </project>
